splash fixes and annotator redirect

--- a/Software/RIA.html
+++ b/Software/RIA.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
    <head>
       <meta charset="utf-8">
-      <title>Software</title>
+      <title>Annotator</title>
       <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐝</text></svg>">
       <meta name     = "author"         content = "Ari Grele">
       <meta name     = "description"    content = "The personal site of Ari Grele, PhD candidate at the university of Nevada Reno">
@@ -64,22 +64,52 @@
       <div class="main">
         <div class="main sidebar">
           <div>
-	    <div>
-	      <h1>Software<h1>
-	    </div>
-            <div>
-              <ul>
-                <li>Rapid Image Annotator</li>
-              <ul>
-            </div>
-            <div>
-            </div>
+            <h1>Rapid Image annotator -</h1>
+            <h2> Windows <span>10-11</span></h2>
+          </div>
+          <div>
+            <ul>
+              <li>Return to downloads</li>
+              <li><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank">Version <span>2.5.37</span></a></li>
+              <li><a href="https://arigrele.github.io/Files/RIA-2.2.33.zip" target="_blank">Version <span>2.2.33</span></a></li>
+            <ul>
           </div>
         </div>
         <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
           <div>
             <section itemprop="text">
-              <p>Software</p>
+		  <h3>Versions:</h3>
+		  <h5><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank"><span>2023-04-17</span>: Version <span>2.5.37</span></a></h5>
+		  <p>Feature additions:</p>
+		  <ul>
+			<li>Added keybindings for custom comments</li>
+			<li>Enabled box deselection to add comments to entire image</li>
+			<li>Added cosmetic selections for displaying bounding boxes from corner points, lines from corner points, circles from midpoint and radius</li>
+			<li>Added images remaining and estimated hours remaining to statistics panel</li>
+			<li>Added ability to load custom setting configurations</li>
+			<li>Added error logging to /data/errorlog.txt</li>
+		  </ul>
+		  <p>Bug fixes</p>
+		  <ul>
+			<li>Prevented unspecified image directories from causing a crash on start-up</li>
+			<li>Prevented the annotator from attempting to load images from folders that no longer exist</li>
+		  </ul>
+
+		 <h5><a href="https://arigrele.github.io/Files/RIA-2.2.33.zip" target="_blank"><span>2022-10-14</span>: Version <span>2.2.33</span></a></h5>
+		  <p>Feature additions:</p>
+		  <ul>
+			<li>Added graphical user interface</li>
+			<li>Added image directory and annotation file loading</li>
+			<li>Added customizable keybindings</li>
+			<li>Added customizable color themes</li>
+			<li>Improved data output format clarity</li>
+		  </ul>
+		  <p>Bug fixes</p>
+		  <ul>
+			<li>Greatly reduced failure rate when loading image data</li>
+			<li>Prevented loading large directories from crashing the application at start-up</li>
+		  </ul>
+
             </section>
           </div>
         </article>
