--- a/Projects/update-updated.html
+++ b/Projects/update-updated.html
@@ -1,138 +1,3 @@
-<!doctype html>
-<html lang="en" class="no-js">
-   <head>
-      <meta charset="utf-8">
-      <title>Annotator</title>
-      <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐝</text></svg>">
-      <meta name     = "author"         content = "Ari Grele">
-      <meta name     = "description"    content = "The personal site of Ari Grele, PhD candidate at the university of Nevada Reno">
-      <meta property = "og:description" content = "The personal site of Ari Grele, PhD candidate at the university of Nevada Reno">
-      <meta property = "og:type"        content = "website">
-      <meta property = "og:locale"      content = "en_US">
-      <meta property = "og:site_name"   content = "Ari Grele">
-      <meta property = "og:title"       content = "Ari Grele">
-      <meta property = "og:url"         content = "https://AriGrele.github.io/">
-      <link rel="canonical" href="https://AriGrele.github.io/">
-      <script type="application/ld+json">{
-         "@context": "https://schema.org",
-         "@type":    "Person",
-         "name":      null,
-         "url":      "https://AriGrele.github.io/"}
-      </script>
-      <link href="/feed.xml" type="application/atom+xml" rel="alternate" title="Ari Grele Feed">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <script>document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';</script>
-      <link rel   = "stylesheet" href = "../style.css">
-      <link rel   = "preload"  href = "https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css" as = "style" onload = "this.onload=null; this.rel = 'stylesheet'">
-      <link rel   = "preload"  href = "https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"   as = "style" onload = "this.onload=null; this.rel = 'stylesheet'">
-      <noscript>
-         <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
-         <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-      </noscript>
-   </head>
-   <body>
-      <div class="header">
-         <div>
-            <nav>
-               <a class="header title" href="../About" style="width: 50px;">Ari Grele</a>
-               <ul>
-                  <li><a href = "/">About</a></li>
-                  <li><a href = "/Research/Index">Research</a></li>
-                  <li><a href = "/Projects/Index">Projects</a></li>
-                  <li><a href = "/Software/Index">Software</a></li>
-               </ul>
-               <div class="header dropdown">
-                  <a>Navigation</a>
-                  <div class="header dropdown content">
-                     <ul>
-                        <li><a href = "/">About</a></li>
-                        <li><a href = "/Research/Index">Research</a></li>
-                        <li><a href = "/Projects/Index">Projects</a></li>
-                        <li><a href = "/Software/Index">Software</a></li>
-                     </ul>
-                  </div>
-               </div>
-            </nav>
-         </div>
-      </div>
-    <div class="splashshort">
-      <div class="head"></div>
-      <img src="../Assets/splash2-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%;">
-	<p>Current research projects</p>
-    </div>
-    <div style="position: relative; background-color: white;">
-      <div class="main">
-        <div class="main sidebar">
-          <div>
-            <h1>Rapid Image annotator -</h1>
-            <h2> Windows <span>10-11</span></h2>
-          </div>
-          <div>
-            <ul>
-              <li>Return to downloads</li>
-              <li><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank">Version <span>2.5.37</span></a></li>
-              <li><a href="https://arigrele.github.io/Files/RIA-2.2.33.zip" target="_blank">Version <span>2.2.33</span></a></li>
-            <ul>
-          </div>
-        </div>
-        <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
-          <div>
-            <section itemprop="text">
-		  <h3>Versions:</h3>
-		  <h5><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank"><span>2023-04-17</span>: Version <span>2.5.37</span></a></h5>
-		  <p>Feature additions:</p>
-		  <ul>
-			<li>Added keybindings for custom comments</li>
-			<li>Enabled box deselection to add comments to entire image</li>
-			<li>Added cosmetic selections for displaying bounding boxes from corner points, lines from corner points, circles from midpoint and radius</li>
-			<li>Added images remaining and estimated hours remaining to statistics panel</li>
-			<li>Added ability to load custom setting configurations</li>
-			<li>Added error logging to /data/errorlog.txt</li>
-		  </ul>
-		  <p>Bug fixes</p>
-		  <ul>
-			<li>Prevented unspecified image directories from causing a crash on start-up</li>
-			<li>Prevented the annotator from attempting to load images from folders that no longer exist</li>
-		  </ul>
-
-		 <h5><a href="https://arigrele.github.io/Files/RIA-2.2.33.zip" target="_blank"><span>2022-10-14</span>: Version <span>2.2.33</span></a></h5>
-		  <p>Feature additions:</p>
-		  <ul>
-			<li>Added graphical user interface</li>
-			<li>Added image directory and annotation file loading</li>
-			<li>Added customizable keybindings</li>
-			<li>Added customizable color themes</li>
-			<li>Improved data output format clarity</li>
-		  </ul>
-		  <p>Bug fixes</p>
-		  <ul>
-			<li>Greatly reduced failure rate when loading image data</li>
-			<li>Prevented loading large directories from crashing the application at start-up</li>
-		  </ul>
-
-            </section>
-          </div>
-        </article>
-      </div>
-    </div>
-    <div class="footer">
-      <footer>
-        <div class="footer links">
-          <ul>
-            <li><a href="https://scholar.google.com/citations?user=DX_8kKYAAAAJ&hl=en" rel="nofollow noopener noreferrer">
-              <i class="ai ai-google-scholar-square" aria-hidden="true"></i> Google Scholar</a></li>
-            <li><a href="https://orcid.org/0000-0002-0876-7682" rel="nofollow noopener noreferrer">
-              <i class="fab fa-orcid" aria-hidden="true"></i> ORCID</a></li>
-            <li><a href="https://www.researchgate.net/profile/Ari-Grele" rel="nofollow noopener noreferrer">
-              <i class="fab fa-fw fa-researchgate" aria-hidden="true"></i> Research Gate</a></li>
-            <li><a href="https://github.com/AriGrele" rel="nofollow noopener noreferrer">
-              <i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a></li>
-          </ul>
-        </div>
-        <div class="footer copyright">
-          <p>&copy; <span>2023</span> Ari Grele.</p>
-        </div>
-      </footer>
-    </div>
-  </body>
-</html>
+<head>
+  <meta http-equiv="Refresh" content="0; URL=https://arigrele.github.io/Software/RIA" />
+</head>
