--- a/Software/RIA.html
+++ b/Software/RIA.html
@@ -57,8 +57,8 @@
       </div>
     <div class="splashshort">
       <div class="head"></div>
-      <img src="../Assets/annotator.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%;">
-	<p>Current research projects</p>
+      <img src="../Assets/annotator.JPG" alt="Header image" itemprop="image" style="object-position: 40% 0%; width: 100%;">
+	<p>Rapid Image Annotator</p>
     </div>
     <div style="position: relative; background-color: white;">
       <div class="main">
