--- a/Projects/Index.html
+++ b/Projects/Index.html
@@ -57,8 +57,8 @@
       </div>
     <div class="splashshort">
       <div class="head"></div>
-      <img src="../Assets/rainforest-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%;">
-	<p>Current research projects</p>
+      <img src="../Assets/rainforest-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 100%; width: 100%;">
+	<p>Other projects</p>
     </div>
     <div style="position: relative; background-color: white;">
       <div class="main">
