--- a/About.html
+++ b/About.html
@@ -155,14 +155,14 @@
                <div itemscope itemtype="https://schema.org/Person">
                   <div>
                      <a class="sub_image">
-                     <img src="Assets/waponi.png" alt="Oncopeltus fasciatus robbing nectar from Asclepias fascicularis" itemprop="image" style="border-radius:0;">
+                     <img src="Assets/limelight-small.JPG" alt="A drone lowers an automated blacklight trap into the canopy in Singapore" itemprop="image" style="border-radius:50%;">
                      </a>
                   </div>
                   <div>
                   </div>
-                  <div style="margin-top:-50px;">
+                  <div>
                      <ul>
-                        <p style="color:white;">TBA</p>
+                        <p style="text-align:center;">A drone lowers an automated blacklight trap into the canopy in Singapore</p>
                      </ul>
                   </div>
                </div>
