--- a/About.html
+++ b/About.html
@@ -1,4 +1,15 @@
 <!doctype html>
+<!--
+I built this entire website from scratch to learn how to use HTML and CSS. That's why it looks bad!          
+              _  _
+             | )/ )           ---             ---
+          \\ |//,' __       --   --         --
+          (")(_)-"()))=-   -       -       -
+             (\\                    --   --
+                                      ---
+
+-->
+
 <html lang="en" class="no-js">
    <head>
       <meta charset="utf-8">
@@ -131,6 +142,9 @@
             <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
                <div>
                   <section class="about" itemprop="text">
+               
+<p>My research broadly focuses on how specialized chemistry mediates interactions between insects and plants, from the level of the individual, to communities, to global patterns of chemical and biological diversity. I aim to combine field and laboratory approaches with state of the art analytical and statistical tools to elucidate subtle processes.
+</p>
                      <p>My current research interests include</p>
                      <ul style="text-align: left;">
                         <li>Latitudinal gradients in species interactions and functional diveristy</li>
