--- a/Projects/Index.html
+++ b/Projects/Index.html
@@ -62,7 +62,7 @@
     </div>
     <div style="position: relative; background-color: white;">
       <div class="main">
-        <div class="main sidebar">
+        <div class="main sidebar" style="margin-left: 0px;margin-right: 0px;">
           <div>
 	    <div>
 	      <h1>Current Projects<h1>
@@ -78,9 +78,24 @@
         </div>
         <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
           <div>
-            <section itemprop="text">
-              <p>Current Projects</p>
-            </section>
+            <div class="holder">
+
+<h1 id="c1">XPRIZE Rainforest</h1>
+                  <ul style="list-style-type:none;padding-left:0px;">
+                     <li>Since 2022 I have been developing computer vision tools for Team Waponi, one of six finalists in the XPRIZE rainforest competition. XPRIZE Rainforest is a 10 million dollar competition to develop automated technology capable of rapidly surveying biodiversity in tropical forests.</li>
+                     <p></p>
+                  </ul>
+               </div>
+               <li class="text block" style="border-bottom:0px;">
+                  <p class="body_text">
+                     <figure class="side_image">
+                     <img src="../Assets/postlight-small.JPG" alt="An automated blacklight collected from the canopy after 24 hours of data sampling" itemprop="image" style="border-radius:50%;">
+<ul>
+                        <figcaption style="text-align:center;">An automated blacklight collected from the canopy after 24 hours of data sampling</figcaption>
+                     </figure>
+                     text here?
+               </p>
+               </li>
           </div>
         </article>
       </div>
