--- a/Projects/Index.html
+++ b/Projects/Index.html
@@ -69,7 +69,7 @@
 	    </div>
             <div>
               <ul>
-                <li>XPRIZE Rainforest</li>
+                <li><a href="#c1">XPRIZE Rainforest</a></li>
               <ul>
             </div>
             <div>
@@ -93,8 +93,13 @@
 <ul>
                         <figcaption style="text-align:center;">An automated blacklight collected from the canopy after 24 hours of data sampling</figcaption>
                      </figure>
-                     
+                     The overarching goal of XPRIZE Rainforest is to develop technology that will allow rapid, automated surveys of biodiversity in highly complex tropical systems. Our solution is a canopy raft that takes data from a large number of separate streams, including image, audio, and DNA data, with a focus on insects. We also seek to avoid the colonialism tacitly present in many efforts to survey biodiversity by directly involving local indigenous communities in data collection and by incorporating indigenous knowledge of rainforest systems into our measures of rainforest communities. 
+<br>
+In June of 2023 Team Waponi competed in the XPRIZE Rainforest semifinals competition in Singapore. In a 24 hour period we were able to photograph more than 17,000 insects from 47 different families. With the addition of acoustic monitoring, DNA barcoding, and eDNA, we were able to identify 21 named species, 46 unique genera, 62 unique families, and 21 orders of plants and animals from the sampling area. Team Waponi was one of 6 finalist teams selected from the 13 competitors. We are now preparing for the finals competition in July of 2024 in Amazonas, Brazil. I am currently working on developing software for the automated training of insect identification models based on community science repositories and digitized insect collections, as well as building data pipelines for incorporating taxonomic, functional, and cultural information into cohesive stories about rainforest ecosystems.  
+
                </p>
+<h2 style="text-align:center;"><a href = "https://www.teamwaponi.org">Read more</a></h2>
+<p></p>
                </li>
           </div>
         </article>
