--- a/About.html
+++ b/About.html
@@ -84,9 +84,9 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
                   </div>
                   <div>
                      <ul style="text-align:center;margin-left:0px;">
-                        <li><a href = "Files/cv.pdf">CV</a></li>
+                        <li><a href = "Files/cv.pdf" style="font-size:14px;">CV</a></li>
                         <li style="height: 0px; margin: 0px 60px;"></li>
-                        <li><a href = "mailto: arijg21@gmail.com">Contact</a></li>
+                        <li><a href = "mailto: arijg21@gmail.com" style="font-size:14px;">Contact</a></li>
                      </ul>
                      <div class="main sidebar links">
                         <ul>
