RIA example text

--- a/Software/Index.html
+++ b/Software/Index.html
@@ -79,7 +79,21 @@
         <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
           <div>
             <section itemprop="text">
-              <p>Software</p>
+<h2 id="p1" style="text-align:center;">Rapid Image Annotator</h2>
+              <p>A tool for rappidly associating spatial and textual information with large numbers of images Current capabilities:</p>
+		<ul>
+		<li>Toolsets geared for extremly rapid image annotation. Users report speeds of up to ~1,000 images annotated per hour for simple tasks and ~200 image per hour for complex tasks</li>
+		<li>Spatial annotation of bounding boxes, bounding circles, lines, and points</li>
+		<li>Text annotation of entire image or individual spatial markers</li>
+		<li>Complete customizability of keyboard inputs</li>
+		<li>Currently only available for Windows 10-11</li>
+		</ul>
+		<p>Example use cases</p>
+		<ul>
+		<li>Annotation of 510,000 insect bounding boxes for computer vision training</li>
+		<li>Labeling of 8,600 milkweed flowers with age classifications</li>
+		<li>Measuring of 17,500 scale bars for standardizing herbivory analyses</li>
+		</ul>
             </section>
           </div>
         </article>
