--- a/Software/Index.html
+++ b/Software/Index.html
@@ -62,7 +62,7 @@
     </div>
     <div style="position: relative; background-color: white;">
       <div class="main">
-        <div class="main sidebar">
+        <div class="main sidebar" style="margin-left:0px;margin-right:0px;">
           <div>
 	    <div>
 	      <h1>Software<h1>
@@ -77,10 +77,12 @@
           </div>
         </div>
         <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
-          <div>
+<h2 id="p1" style="text-align:center;margin:auto;margin-top:20px;margin-bottom:15px;">Rapid Image Annotator</h2>
+          <div class="downloads">
             <section itemprop="text">
-<h2 id="p1" style="text-align:center;">Rapid Image Annotator</h2>
-              <p>A tool for rappidly associating spatial and textual information with large numbers of images Current capabilities:</p>
+
+              <p>A tool for rappidly associating spatial and textual information with large numbers of images.</p>
+<p>Current capabilities:</p>
 		<ul>
 		<li>Toolsets geared for extremly rapid image annotation. Users report speeds of up to ~1,000 images annotated per hour for simple tasks and ~200 image per hour for complex tasks</li>
 		<li>Spatial annotation of bounding boxes, bounding circles, lines, and points</li>
@@ -95,6 +97,17 @@
 		<li>Measuring of 17,500 scale bars for standardizing herbivory analyses</li>
 		</ul>
             </section>
+	<section style="width:200px;flex-shrink:0;margin:auto;margin-top:0px;padding-left:10px;">
+	<h1 style="margin-top:0px;">Downloads</h1>
+	<ul style="border-bottom:1px solid #cbcbcb;list-style-type: none;padding-left:0px;">
+	<li>Windows 10-11</li>
+		<ul style="font-size:15px;">	
+		<li>All versions</li><br>
+		<li>Version X</li>
+		<li>Version 2.5.37</li>
+		<li>Version 2.2.33</li>
+	</ul><br></ul>
+	</section>
           </div>
         </article>
       </div>
