--- a/Software/Index.html
+++ b/Software/Index.html
@@ -90,7 +90,7 @@
 		<li>Complete customizability of keyboard inputs</li>
 		<li>Currently only available for Windows 10-11</li>
 		</ul>
-		<p>Example use cases</p>
+		<p>Things I developed this software for:</p>
 		<ul>
 		<li>Annotation of 510,000 insect bounding boxes for computer vision training</li>
 		<li>Labeling of 8,600 milkweed flowers with age classifications</li>
@@ -101,11 +101,11 @@
 	<h1 style="margin-top:0px;">Downloads</h1>
 	<ul style="border-bottom:1px solid #cbcbcb;list-style-type: none;padding-left:0px;">
 	<li>Windows 10-11</li>
-		<ul style="font-size:15px;">	
-		<li>All versions</li><br>
-		<li>Version X</li>
-		<li>Version 2.5.37</li>
-		<li>Version 2.2.33</li>
+		<ul style="font-size:16px;list-style-type:none;">	
+		<li><a href="/RIA">All versions</a></li><br>
+		<li><a>Version X</a></li>
+		<li><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank">Version 2.5.37</a></li>
+		<li><a href="https://arigrele.github.io/Files/RIA-2.2.33.zip" target="_blank">Version 2.2.33</a></li>
 	</ul><br></ul>
 	</section>
           </div>
