--- a/Software/RIA.html
+++ b/Software/RIA.html
@@ -69,7 +69,7 @@
           </div>
           <div>
             <ul>
-              <li>Return to downloads</li>
+              <li><a href="/index">Return to downloads</a></li>
               <li><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank">Version <span>2.5.37</span></a></li>
               <li><a href="https://arigrele.github.io/Files/RIA-2.2.33.zip" target="_blank">Version <span>2.2.33</span></a></li>
             <ul>
