--- a/Software/Index.html
+++ b/Software/Index.html
@@ -102,7 +102,7 @@
 	<ul style="border-bottom:1px solid #cbcbcb;list-style-type: none;padding-left:0px;">
 	<li>Windows 10-11</li>
 		<ul style="font-size:16px;list-style-type:none;">	
-		<li><a href="Software/RIA">All versions</a></li><br>
+		<li><a href="RIA">All versions</a></li><br>
 		<li><a>Version X</a></li>
 		<li><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank">Version 2.5.37</a></li>
 		<li><a href="https://arigrele.github.io/Files/RIA-2.2.33.zip" target="_blank">Version 2.2.33</a></li>
