--- a/Software/Index.html
+++ b/Software/Index.html
@@ -69,7 +69,7 @@
 	    </div>
             <div>
               <ul>
-                <li>Rapid Image Annotator</li>
+                <li><a href="#p1">Rapid Image Annotator</a></li>
               <ul>
             </div>
             <div>
