--- a/Software/Index.html
+++ b/Software/Index.html
@@ -103,7 +103,7 @@
 	<li>Windows 10-11</li>
 		<ul style="font-size:16px;list-style-type:none;">	
 		<li><a href="RIA">All versions</a></li><br>
-		<li><a>Version X</a></li>
+		<li><a href="https://arigrele.github.io/Files/RIA-2.5.42.zip" target="_blank">Version 2.5.42</a></li>
 		<li><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank">Version 2.5.37</a></li>
 		<li><a href="https://arigrele.github.io/Files/RIA-2.2.33.zip" target="_blank">Version 2.2.33</a></li>
 	</ul><br></ul>
