--- a/Software/RIA.html
+++ b/Software/RIA.html
@@ -70,6 +70,7 @@
           <div>
             <ul>
               <li><a href="Index#p1">Return to downloads</a></li>
+	      <li><a href="https://arigrele.github.io/Files/RIA-2.5.42.zip" target="_blank">Version <span>2.5.42</span></a></li>
               <li><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank">Version <span>2.5.37</span></a></li>
               <li><a href="https://arigrele.github.io/Files/RIA-2.2.33.zip" target="_blank">Version <span>2.2.33</span></a></li>
             <ul>
@@ -79,6 +80,15 @@
           <div>
             <section itemprop="text">
 		  <h3>Versions:</h3>
+		  <h5><a href="https://arigrele.github.io/Files/RIA-2.5.42.zip" target="_blank"><span>2023-10-29</span>: Version <span>2.5.42</span></a></h5>
+		  <p>Feature additions:</p>
+
+		  <p>Bug fixes</p>
+		  <ul>
+			<li>Prevented keybindings dialog from saving comments without keybindings</li>
+			<li>Prevented crash from loading settings config files with missing data </li>
+		  </ul>
+
 		  <h5><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank"><span>2023-04-17</span>: Version <span>2.5.37</span></a></h5>
 		  <p>Feature additions:</p>
 		  <ul>
