detect dark mode

--- a/About.html
+++ b/About.html
@@ -71,7 +71,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
          <img src="Assets/main-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 100%;">
          <p>About Ari ↓</p>
       </div>
-      <div style="position: relative; background-color: white;">
+      <div class="surmain">
          <div class="main">
             <div class="main sidebar">
                <div itemscope itemtype="https://schema.org/Person">
@@ -121,7 +121,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
          <img src="Assets/fieldcam-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 50%; width: 110%;">
          <p>Research</p>
       </div>
-      <div style="position: relative; background-color: white;">
+      <div class="surmain">
          <div class="main">
             <div class="main sub_sidebar">
                <div itemscope itemtype="https://schema.org/Person">
@@ -163,7 +163,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
          <img src="Assets/rainforest-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 80%; width: 100%;">
          <p>Projects</p>
       </div>
-      <div style="position: relative; background-color: white;">
+      <div class="surmain">
          <div class="main">
             <div class="main sub_sidebar">
                <div itemscope itemtype="https://schema.org/Person">
@@ -195,7 +195,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
          <img src="Assets/annotator.JPG" alt="Header image" itemprop="image" style="object-position: 0% 0%; width: 100%;">
          <p>Software</p>
       </div>
-      <div style="position: relative; background-color: white;padding-bottom: 100px;">
+      <div class="surmain" style="padding-bottom: 100px;">
          <div class="main">
             <div class="main sub_sidebar">
                <div itemscope itemtype="https://schema.org/Person">
