--- a/Projects/Index.html
+++ b/Projects/Index.html
@@ -60,7 +60,7 @@
       <img src="../Assets/rainforest-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 100%; width: 100%;">
 	<p>Other projects</p>
     </div>
-    <div style="position: relative; background-color: white;">
+    <div class="surmain">
       <div class="main">
         <div class="main sidebar" style="margin-left: 0px;margin-right: 0px;">
           <div>
