--- a/Software/RIA.html
+++ b/Software/RIA.html
@@ -60,7 +60,7 @@
       <img src="../Assets/annotator.JPG" alt="Header image" itemprop="image" style="object-position: 40% 0%; width: 100%;">
 	<p>Rapid Image Annotator</p>
     </div>
-    <div style="position: relative; background-color: white;">
+    <div class="surmain">
       <div class="main">
         <div class="main sidebar">
           <div>
