--- a/Research/Index.html
+++ b/Research/Index.html
@@ -60,7 +60,7 @@
          <img src="../Assets/fieldcam-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 50%; width: 110%;">
          <p>Current research projects</p>
       </div>
-      <div style="position: relative; background-color: white;">
+    <div class="surmain">
          <div class="main">
             <div class="main sidebar" style="margin-left: 0px;margin-right: 0px;">
                <div>
