new rainforest image

--- a/About.html
+++ b/About.html
@@ -169,7 +169,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
          </div>
       </div>
       <div class="splashshort">
-         <img src="Assets/rainforest-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 80%; width: 100%;">
+         <img src="Assets/rainforest-2-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 20%; width: 100%;">
          <p>Projects</p>
       </div>
       <div class="surmain">
