--- a/About.html
+++ b/About.html
@@ -120,7 +120,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
                <div>
                   <section class="about" itemprop="text">
                      <h2>Hello!</h2>
-                     <p>I'm currently a 5th year PhD candidate studying chemical ecology in the EECB program at the University of Nevada Reno. I recieved my BS in entomology from Cornell university in 2019, where I worked in labs broadly studying non-consumptive effects of predators, induced plant defenses, and how chemcial signaling mediates pollinator and social insect behavior.</p>
+                     <p>I'm currently a 6th year PhD candidate studying chemical ecology in the EECB program at the University of Nevada Reno. I recieved my BS in entomology from Cornell university in 2019, where I worked in labs broadly studying non-consumptive effects of predators, induced plant defenses, and how chemcial signaling mediates pollinator and social insect behavior.</p>
                   </section>
                </div>
             </article>
@@ -193,7 +193,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
             <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
                <div>
                   <section class="about" itemprop="text">
-                     <p>In 2022 I became involved in the XPRIZE Rainforest competition to develop methods of rapidly surveying tropical biodviersity. I am the computer vision and data pipeline lead for Team Waponi. Our goal is to use multi-modal data collection and state-of-the-art analytic tools to identify taxa, with a special focus on insect communities, to provide critical insights for rainforest conservation.</p>
+                     <p>In 2022 I became involved in the XPRIZE Rainforest competition to develop methods of rapidly surveying tropical biodviersity. I am the computer vision and data pipeline lead for Limelight: Rainforest. Our goal is to use multi-modal data collection and state-of-the-art analytic tools to identify taxa, with a special focus on insect communities, to provide critical insights for rainforest conservation.</p>
                      <h2><a href = "/Projects/Index">Read more</a></h2>
                   </section>
                </div>
