--- a/About.html
+++ b/About.html
@@ -178,14 +178,14 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
                <div itemscope itemtype="https://schema.org/Person">
                   <div>
                      <a class="sub_image">
-                     <img src="Assets/limelight-small.JPG" alt="A drone lowers an automated blacklight trap into the canopy in Singapore" itemprop="image" style="border-radius:50%;">
+                     <img src="Assets/drone2024-small.JPG" alt="A drone lowers an automated blacklight trap into the canopy in the Amazon rainforest" itemprop="image" style="border-radius:50%;">
                      </a>
                   </div>
                   <div>
                   </div>
                   <div>
                      <ul>
-                        <p style="text-align:center;">A drone lowers an automated blacklight trap into the canopy in Singapore</p>
+                        <p style="text-align:center;">A drone lowers an automated blacklight trap into the canopy in the Amazon rainforest</p>
                      </ul>
                   </div>
                </div>
@@ -210,7 +210,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
                <div itemscope itemtype="https://schema.org/Person">
                   <div>
                      <a class="sub_image">
-                     <img src="Assets/bombus.png" alt="State of the art computer vison models allow automated annotation of field images and video" itemprop="image">
+                     <img src="Assets/lighttrap-small.png" alt="State of the art computer vison models allow automated annotation of field images and video" itemprop="image">
                      </a>
                   </div>
                   <div>
