--- a/Projects/Index.html
+++ b/Projects/Index.html
@@ -90,9 +90,9 @@
                <li class="text block" style="border-bottom:0px;">
                   <p class="body_text">
                      <figure class="side_image">
-                     <img src="../Assets/postlight-small.JPG" alt="An automated blacklight collected from the canopy after 24 hours of data sampling" itemprop="image" style="border-radius:50%;">
+                     <img src="../Assets/limelight2024-small.png" alt="An automated blacklight trap sampling insects in the canopy of the Brazilian Amazon" itemprop="image" style="border-radius:50%;">
 <ul>
-                        <figcaption style="text-align:center;">An automated blacklight collected from the canopy after 24 hours of data sampling</figcaption>
+                        <figcaption style="text-align:center;">An automated blacklight trap sampling insects in the canopy of the Brazilian Amazon</figcaption>
                      </figure>
                      The overarching goal of XPRIZE Rainforest is to develop technology that will allow rapid, automated surveys of biodiversity in highly complex tropical systems. Our solution is a canopy raft that takes data from a large number of separate streams, including image, audio, and DNA data, with a focus on insects. We also seek to avoid the colonialism tacitly present in many efforts to survey biodiversity by directly involving local indigenous communities in data collection and by incorporating indigenous knowledge of rainforest systems into our measures of rainforest communities. 
 <br>
