--- a/Research/Index.html
+++ b/Research/Index.html
@@ -133,8 +133,8 @@
                <li class="text block">
                   <p class="body_text">
                      <figure class="side_image">
-                     <img src="../Assets/bombus.png" alt="Bumblebee with genus level identification assigned by a convolutional neural network" itemprop="image">
-                     <figcaption style="text-align:center;">Bumblebee with genus level identification assigned by a convolutional neural network</figcaption>
+                     <img src="../Assets/lighttrap-small.png" alt="Insects at an automated light trap in Brazil localized using a convolutional neural network" itemprop="image">
+                     <figcaption style="text-align:center;">Insects at an automated light trap in Brazil localized using a convolutional neural network</figcaption>
 </figure>
                      Field based studies of pollinator behavior are frequently limited in scope. The amount of labor required to observe flowers for extended time periods means that many pollinator studies lack the data to accurately estimate pollinator visitation rates and foraging times. While video based methods for collecting visitation data can avoid some of these issues, considerable storage space and post-processing are required to extract usable data from videos. To address these problems, I've developed a system of computer vision models capable of cropping insects from videos and identifying them to species in real time. Built on a hand-annotated dataset of over 500,000 insect images, this system is capable of cropping 98% of insects, and can identify over 340 species of North American pollinators with greater than 90% accuracy. I am currently working on expanding these models to be able to be tuned to insect species from any location across the globe automatically. These models can easily be applied to any image or video data, from laboratory or field environments. 
                   </p>
@@ -149,11 +149,11 @@
                   </li>
                </ul>
                <ul style="list-style-type: none">
-                  <li style="list-style-type:'*  '"><b>A. Grele</b>, T. J. Massad, K. A. Uckele, L. Dyer, Y. Antonini, L. Braga, M. L. Forister, L. Sulca-Garro, M. Kato, and H. G. Lopez. 2023. Intra and interspecific diversity in a tropical plant clade alter herbivory and ecosystem resilience. bioRxiv:2023–03.</li>
+                  <li><b>A. Grele</b>, T. J. Massad, K. A. Uckele, L. Dyer, Y. Antonini, L. Braga, M. L. Forister, L. Sulca-Garro, M. Kato, and H. G. Lopez. 2023. <i>Intra and interspecific diversity in a tropical plant clade alter herbivory and ecosystem resilience</i>. Elife 12, RP86988.</li>
                   <p></p>
-                  <li style="list-style-type:'*  '">Massad, T., A. R. Nascimento, D. Campos, W. Simbaña, H. G. Lopez, L. S. Garro, C. Lepesqueur, L. Richards, M. Forister, J. Stireman, E. Tepe, K. Uckele, L. Braga, T. Walla, A. Smilanich, <b>A. Grele</b>, and L. Dyer. 2023. Variation in the strength of local and regional determinants of herbivory across the Neotropics.</li>
+                  <li>Massad, T., A. R. Nascimento, D. Campos, W. Simbaña, H. G. Lopez, L. S. Garro, C. Lepesqueur, L. Richards, M. Forister, J. Stireman, E. Tepe, K. Uckele, L. Braga, T. Walla, A. Smilanich, <b>A. Grele</b>, and L. Dyer. 2023. <i>Variation in the strength of local and regional determinants of herbivory across the Neotropics</i>. Oikos, e10218</li>
                   <p></p>
-                  <li>Getman‐Pickering, Z. L., A. Campbell, N. Aflitto, <b>A. Grele</b>, J. K. Davis, and T. A. Ugine. 2020. LeafByte: A mobile application that measures leaf area and herbivory quickly and accurately. Methods in Ecology and Evolution 11:215–221.</li>
+                  <li>Getman‐Pickering, Z. L., A. Campbell, N. Aflitto, <b>A. Grele</b>, J. K. Davis, and T. A. Ugine. 2020. <i>LeafByte: A mobile application that measures leaf area and herbivory quickly and accurately</i>. Methods in Ecology and Evolution 11:215–221.</li>
                </ul>
                <ul style="list-style-type: none;padding-left: 0px;">
                   <li>
@@ -164,11 +164,17 @@
                   </li>
                </ul>
                <ul style="list-style-type: none">
-                  <li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. Simulated herbivory increases plant fitness by altering floral traits and pollinator behavior. <span>2023</span> Mar <span>2</span>. Gordan Research Conference</li>
+<li style="list-style-type:'†  '"><b>Grele A</b>, Richards L. 2024. <i>Chemical signals and chemical noise - why plant defenses are more complex and pheromones are simpler in the tropics</i>. 27th International Congress of Entomology.</li>
+<p></p>
+<li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. 2024. <i>Intra- and interspecific variation in milkweed nectar chemistry</i>. HCCE annual symposium.</li>
+<p></p>
+<li style="list-style-type:'†  '"><b>Grele A</b>, Mallon C. 2024. <i>Raman Spectroscopy at a Distance: A Tool for Ecological Research in the Field</i>. HCCE annual symposium.</li>
+<p></p>
+                  <li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. 2023. <i>Simulated herbivory increases plant fitness by altering floral traits and pollinator behavior</i>. Gordon Research Conference.</li>
                   <p></p>
-                  <li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. Using machine learning to study pollination with high temporal and taxonomic resolution. Entomology <span>2022</span> Nov <span>16</span>. ESA.</li>
+                  <li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. 2022. <i>Using machine learning to study pollination with high temporal and taxonomic resolution</i>. Entomology.</li>
                   <p></p>
-                  <li style="list-style-type:'*  '"><b>Grele A</b>, Aflitto NC, Thaler JS. Species-specific responses of the Colorado potato beetle to pheromone cues of predatory and phytophagous pentatomids. Entomology <span>2018</span> Nov <span>12</span>. ESA.</li>
+                  <li style="list-style-type:'*  '"><b>Grele A</b>, Aflitto NC, Thaler JS. 2018. <i>Species-specific responses of the Colorado potato beetle to pheromone cues of predatory and phytophagous pentatomids</i>. Entomology.</li>
                </ul>
                </article>
          </div>
