--- a/About.html
+++ b/About.html
@@ -120,7 +120,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
                <div>
                   <section class="about" itemprop="text">
                      <h2>Hello!</h2>
-                     <p>I'm currently a 6th year PhD candidate studying chemical ecology in the EECB program at the University of Nevada Reno. I recieved my BS in entomology from Cornell university in 2019, where I worked in labs broadly studying non-consumptive effects of predators, induced plant defenses, and how chemcial signaling mediates pollinator and social insect behavior.</p>
+                     <p>I'm currently a 6th year PhD candidate studying chemical ecology in the EECB program at the University of Nevada Reno. I received my BS in entomology from Cornell university in 2019, where I worked in labs broadly studying non-consumptive effects of predators, induced plant defenses, and how chemical signaling mediates pollinator and social insect behavior.</p>
                   </section>
                </div>
             </article>
@@ -156,7 +156,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
 </p>
                      <p>My current research interests include</p>
                      <ul style="text-align: left;">
-                        <li>Latitudinal gradients in species interactions and functional diveristy</li>
+                        <li>Latitudinal gradients in species interactions and functional diversity</li>
                         <li>The role of plant physical and chemical traits in mediating herbivore and pollinator interactions</li>
                         <li>Intra and interspecific variation in nectar chemistry and the adaptive role of nectar toxins</li>
                         <li>Global patterns of semiochemical richness</li>
@@ -193,7 +193,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
             <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
                <div>
                   <section class="about" itemprop="text">
-                     <p>In 2022 I became involved in the XPRIZE Rainforest competition to develop methods of rapidly surveying tropical biodviersity. I am the computer vision and data pipeline lead for Limelight: Rainforest. Our goal is to use multi-modal data collection and state-of-the-art analytic tools to identify taxa, with a special focus on insect communities, to provide critical insights for rainforest conservation.</p>
+                     <p>In 2022 I became involved in the XPRIZE Rainforest competition to develop methods of rapidly surveying tropical biodiversity. I am the computer vision and data pipeline lead for Limelight: Rainforest. Our goal is to use multi-modal data collection and state-of-the-art analytic tools to identify taxa, with a special focus on insect communities, to provide critical insights for rainforest conservation.</p>
                      <h2><a href = "/Projects/Index">Read more</a></h2>
                   </section>
                </div>
@@ -210,7 +210,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
                <div itemscope itemtype="https://schema.org/Person">
                   <div>
                      <a class="sub_image">
-                     <img src="Assets/lighttrap-small.png" alt="State of the art computer vison models allow automated annotation of field images and video" itemprop="image">
+                     <img src="Assets/lighttrap-small.png" alt="State of the art computer vision models allow automated annotation of field images and video" itemprop="image">
                      </a>
                   </div>
                   <div>
@@ -225,7 +225,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
             <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
                <div>
                   <section class="about" itemprop="text">
-                     <p>I frequently build tools to assist in processing the complicated data associated with chemistry, insect behavior, and global biodiveristy repositories. Open source tools I've built incude:</p>
+                     <p>I frequently build tools to assist in processing the complicated data associated with chemistry, insect behavior, and global biodiversity repositories. Open source tools I've built include:</p>
                      <ul style="text-align: left;">
                         <li>Computer vision models for localizing and identifying insects in field videos</li>
                         <li>Annotators for rapidly associating image data with taxonomic and ecological information</li>
