--- a/Software/Index.html
+++ b/Software/Index.html
@@ -82,10 +82,10 @@
           <div class="downloads">
             <section itemprop="text">
 
-              <p>A tool for rappidly associating spatial and textual information with large numbers of images.</p>
+              <p>A tool for rapidly associating spatial and textual information with large numbers of images.</p>
 <p>Current capabilities:</p>
 		<ul>
-		<li>Toolsets geared for extremly rapid image annotation. Users report speeds of up to ~1,000 images annotated per hour for simple tasks and ~200 image per hour for complex tasks</li>
+		<li>Toolsets geared for extremely rapid image annotation. Users report speeds of up to ~1,000 images annotated per hour for simple tasks and ~200 image per hour for complex tasks</li>
 		<li>Spatial annotation of bounding boxes, bounding circles, lines, and points</li>
 		<li>Text annotation of entire image or individual spatial markers</li>
 		<li>Complete customizability of keyboard inputs</li>
